Setup the base url

--- a/checklists/index.html
+++ b/checklists/index.html
@@ -10,9 +10,9 @@ title: Checklists
 
         <div class="section__text mdl-cell mdl-cell--12-col">
           <ul>
-            <li><a href="/checklists/releng">Release Engineering</a></li>
-            <li><a href="/checklists/marketing">Marketing</a></li>
-            <li><a href="/checklists/sirius-integration">Sirius Integration</a></li>
+            <li><a href="{{ site.baseurl }}checklists/releng">Release Engineering</a></li>
+            <li><a href="{{ site.baseurl }}checklists/marketing">Marketing</a></li>
+            <li><a href="{{ site.baseurl }}checklists/sirius-integration">Sirius Integration</a></li>
           </ul>
         </div>
 
