--- a/documentation/index.html
+++ b/documentation/index.html
@@ -8,8 +8,8 @@ title: Documentation
       <div class="mdl-card__supporting-text">
         <h4>Documentation</h4>
         <ul>
-          <li><a href="/documentation/contribution-guide">Contribution Guide</a></li>
-          <li><a href="/documentation/developer-guide">Developer Guide</a></li>
+          <li><a href="{{ site.baseurl }}documentation/contribution-guide">Contribution Guide</a></li>
+          <li><a href="{{ site.baseurl }}documentation/developer-guide">Developer Guide</a></li>
         </ul>
       </div>
     </div>
