--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title:
         </p>
       </div>
       <div class="mdl-card__actions">
-        <a href="/features" class="mdl-button">Have a look at our features</a>
+        <a href="{{ site.baseurl }}features" class="mdl-button">Have a look at our features</a>
       </div>
     </div>
   </section>
