--- a/userstories/index.html
+++ b/userstories/index.html
@@ -22,7 +22,7 @@ title: User Stories
             </thead>
             <tbody>
               <tr>
-                <td class="mdl-data-table__cell--non-numeric"><a href="/userstories/CLA-1">CLA-1</a></td>
+                <td class="mdl-data-table__cell--non-numeric"><a href="{{ site.baseurl }}userstories/CLA-1">CLA-1</a></td>
                 <td class="mdl-data-table__cell--non-numeric">As Claire, I need to have continuous integration.</td>
               </tr>
             </tbody>
@@ -49,7 +49,7 @@ title: User Stories
             </thead>
             <tbody>
               <tr>
-                <td class="mdl-data-table__cell--non-numeric"><a href="/userstories/DAV-1">DAV-1</a></td>
+                <td class="mdl-data-table__cell--non-numeric"><a href="{{ site.baseurl }}userstories/DAV-1">DAV-1</a></td>
                 <td class="mdl-data-table__cell--non-numeric">As David, I need to have up-to-date project metadata.</td>
               </tr>
             </tbody>
@@ -76,7 +76,7 @@ title: User Stories
             </thead>
             <tbody>
               <tr>
-                <td class="mdl-data-table__cell--non-numeric"><a href="/userstories/SHA-1">SHA-1</a></td>
+                <td class="mdl-data-table__cell--non-numeric"><a href="{{ site.baseurl }}userstories/SHA-1">SHA-1</a></td>
                 <td class="mdl-data-table__cell--non-numeric">As Sharon, I need to have an up-to-date proper branding.</td>
               </tr>
             </tbody>
@@ -103,7 +103,7 @@ title: User Stories
             </thead>
             <tbody>
               <tr>
-                <td class="mdl-data-table__cell--non-numeric"><a href="/userstories/FRA-1">FRA-1</a></td>
+                <td class="mdl-data-table__cell--non-numeric"><a href="{{ site.baseurl }}userstories/FRA-1">FRA-1</a></td>
                 <td class="mdl-data-table__cell--non-numeric">As Francis, I need to have an EEF developer guide.</td>
               </tr>
             </tbody>
@@ -130,7 +130,7 @@ title: User Stories
             </thead>
             <tbody>
               <tr>
-                <td class="mdl-data-table__cell--non-numeric"><a href="/userstories/ZOE-1">ZOE-1</a></td>
+                <td class="mdl-data-table__cell--non-numeric"><a href="{{ site.baseurl }}userstories/ZOE-1">ZOE-1</a></td>
                 <td class="mdl-data-table__cell--non-numeric">As Zoe, I need to have an EEF-based properties view for my EObjects.</td>
               </tr>
             </tbody>
@@ -157,7 +157,7 @@ title: User Stories
             </thead>
             <tbody>
               <tr>
-                <td class="mdl-data-table__cell--non-numeric"><a href="/userstories/LUC-1">LUC-1</a></td>
+                <td class="mdl-data-table__cell--non-numeric"><a href="{{ site.baseurl }}userstories/LUC-1">LUC-1</a></td>
                 <td class="mdl-data-table__cell--non-numeric">As Lucas, I need to edit all the structural features of an EObject.</td>
               </tr>
             </tbody>
