--- a/versions/2.0.0/checklist/index.html
+++ b/versions/2.0.0/checklist/index.html
@@ -19,7 +19,7 @@ title: EEF 2.0.0 Checklist
             </thead>
             <tbody>
               <tr>
-                <td class="mdl-data-table__cell--non-numeric eef-table__category" colspan="3"><a href="/checklists/releng">Release Engineering</td>
+                <td class="mdl-data-table__cell--non-numeric eef-table__category" colspan="3"><a href="{{ site.baseurl }}checklists/releng">Release Engineering</td>
               </tr>
               <tr>
                 <td class="mdl-data-table__cell--non-numeric">RELENG-1</td>
@@ -92,7 +92,7 @@ title: EEF 2.0.0 Checklist
                 <td class="mdl-data-table__cell--non-numeric">KO</td>
               </tr>
               <tr>
-                <td class="mdl-data-table__cell--non-numeric eef-table__category" colspan="3"><a href="/checklists/marketing">Marketing</a></td>
+                <td class="mdl-data-table__cell--non-numeric eef-table__category" colspan="3"><a href="{{ site.baseurl }}checklists/marketing">Marketing</a></td>
               </tr>
               <tr>
                 <td class="mdl-data-table__cell--non-numeric">MARKET-1</td>
@@ -120,7 +120,7 @@ title: EEF 2.0.0 Checklist
                 <td class="mdl-data-table__cell--non-numeric">KO</td>
               </tr>
               <tr>
-                <td class="mdl-data-table__cell--non-numeric eef-table__category" colspan="3"><a href="/checklists/sirius-integration">Sirius Integration</a></td>
+                <td class="mdl-data-table__cell--non-numeric eef-table__category" colspan="3"><a href="{{ site.baseurl }}checklists/sirius-integration">Sirius Integration</a></td>
               </tr>
               <tr>
                 <td class="mdl-data-table__cell--non-numeric">SIRIUS-1</td>
