--- a/versions/index.html
+++ b/versions/index.html
@@ -14,7 +14,7 @@ title: Versions
             This release will be part of the Eclipse Neon Simultaneous Release.
           </p>
           <p>
-            <a href="/versions/2.0.0">More information</a>
+            <a href="{{ site.baseurl }}versions/2.0.0">More information</a>
           </p>
         </div>
 
