--- a/meetingminutes/index.html
+++ b/meetingminutes/index.html
@@ -10,7 +10,7 @@ title: Meeting Minutes
 
         <div class="section__text mdl-cell mdl-cell--12-col">
           <ul>
-            <li><a href="/meetingminutes/meetingminutes-2015-07-21">2015-07-21</a></li>
+            <li><a href="{{ site.baseurl }}meetingminutes/meetingminutes-2015-07-21">2015-07-21</a></li>
           </ul>
         </div>
       </div>
