--- a/versions/2.0.0/index.html
+++ b/versions/2.0.0/index.html
@@ -11,12 +11,12 @@ title: EEF 2.0.0
         <div class="section__text mdl-cell mdl-cell--12-col">
           <h5>User Stories</h5>
           <ul>
-            <li><a href="/userstories/CLA-1">CLA-1</a></li>
-            <li><a href="/userstories/DAV-1">DAV-1</a></li>
-            <li><a href="/userstories/SHA-1">SHA-1</a></li>
-            <li><a href="/userstories/FRA-1">FRA-1</a></li>
-            <li><a href="/userstories/ZOE-1">ZOE-1</a></li>
-            <li><a href="/userstories/LUC-1">LUC-1</a></li>
+            <li><a href="{{ site.baseurl }}userstories/CLA-1">CLA-1</a></li>
+            <li><a href="{{ site.baseurl }}userstories/DAV-1">DAV-1</a></li>
+            <li><a href="{{ site.baseurl }}userstories/SHA-1">SHA-1</a></li>
+            <li><a href="{{ site.baseurl }}userstories/FRA-1">FRA-1</a></li>
+            <li><a href="{{ site.baseurl }}userstories/ZOE-1">ZOE-1</a></li>
+            <li><a href="{{ site.baseurl }}userstories/LUC-1">LUC-1</a></li>
           </ul>
         </div>
 
@@ -33,7 +33,7 @@ title: EEF 2.0.0
           <ul>
             <li>Hudson Job: </li>
             <li>Hudson Reviews Job: </li>
-            <li><a href="/versions/2.0.0/checklist">Checklist</a></li>
+            <li><a href="{{ site.baseurl }}versions/2.0.0/checklist">Checklist</a></li>
           </ul>
         </div>
 
