Meeting minutes of the first technical meeting
1) The meeting minutes have been updated
2) A specification of the EEF metamodel has been created

--- a/meetingminutes/index.html
+++ b/meetingminutes/index.html
@@ -11,6 +11,7 @@ title: Meeting Minutes
         <div class="section__text mdl-cell mdl-cell--12-col">
           <ul>
             <li><a href="{{ site.baseurl }}meetingminutes/meetingminutes-2015-07-21">2015-07-21</a></li>
+            <li><a href="{{ site.baseurl }}meetingminutes/meetingminutes-2015-07-24">2015-07-24</a></li>
           </ul>
         </div>
       </div>
