--- a/specifications/index.html
+++ b/specifications/index.html
@@ -18,15 +18,7 @@ title: Specifications
             <tbody>
               <tr>
                 <td class="mdl-data-table__cell--non-numeric"><a href="{{ site.baseurl }}specifications/SPEC-1">SPEC-1</a></td>
-                <td class="mdl-data-table__cell--non-numeric">To be determined.</td>
-              </tr>
-              <tr>
-                <td class="mdl-data-table__cell--non-numeric"><a href="{{ site.baseurl }}specifications/SPEC-2">SPEC-2</a></td>
-                <td class="mdl-data-table__cell--non-numeric">To be determined.</td>
-              </tr>
-              <tr>
-                <td class="mdl-data-table__cell--non-numeric"><a href="{{ site.baseurl }}specifications/SPEC-3">SPEC-3</a></td>
-                <td class="mdl-data-table__cell--non-numeric">To be determined.</td>
+                <td class="mdl-data-table__cell--non-numeric">EEF Metamodels.</td>
               </tr>
             </tbody>
           </table>
