Add new specifications
1) The dedicated pages for user stories have been removed
2) Collections have been added for specifications
3) Fix some issues in the CSS
4) Improved the contribution guide

--- a/documentation/contribution-guide/index.html
+++ b/documentation/contribution-guide/index.html
@@ -11,6 +11,18 @@ title: Contribution Guide
         <p>
           In this document, you will find all the necessary information used to start contributing to EEF. From the configuration of your development environment to some details on the various tools and settings to use, everything will be explained here.
         </p>
+        <p>
+          The goal of the project is to have Properties view and wizards perfectly integrated to Eclipse Sirius and Obeo Designer Team (client / server and asynchronous context). EEF should also provide implementations of Dialogs, EObjects selectors and files selectors easily reusable in other contexts. The user interface should support an asynchronous context where fields could be initialized without any value in a read only mode and updated later on.
+        </p>
+        <p>
+          The less code, the better. EEF should be easily maintainable and properly structured. Its concepts should be easily extended.
+        </p>
+        <p>
+          The user interface should be dynamic and parameterized in a similar fashion as Eclipse Sirius.
+        </p>
+        <p>
+          The project should have a modular structure with APIs structured in a similar way. The core components should not depend on any user interface toolkit (i.e SWT), the components depending on a specific toolkit should be isolated and even the components using EMF edit should not depend on a user interface toolkit.
+        </p>
       </div>
     </div>
   </section>
@@ -23,6 +35,97 @@ title: Contribution Guide
           <li>Eclipse Mars SDK Release</li>
           <li>Checkstyle 6.5</li>
           <li>Target Platform DSL</li>
+          <li>Jekyll 2.5.x</li>
+        </ul>
+        <p>
+          The target platform of the project should support the same platforms as Sirius.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section class="section--center mdl-grid">
+    <div class="mdl-card mdl-cell mdl-cell--12-col mdl-shadow--2dp">
+      <div class="mdl-card__supporting-text">
+        <h4>API Documentation</h4>
+        <ul>
+          <li>All the APIs need to be documented with, at least, the following information</li>
+          <li>Interface of the API?</li>
+          <li>What can of instances are required? (EPackage, EClass, etc) and why?</li>
+          <li>Lifecycle of the API? (creation, deletion)</li>
+        </ul>
+        <p>
+          The documentation of the API should also contain a scenario indicating which instances are involved and when.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section class="section--center mdl-grid">
+    <div class="mdl-card mdl-cell mdl-cell--12-col mdl-shadow--2dp">
+      <div class="mdl-card__supporting-text">
+        <h4>Development Process</h4>
+        <ul>
+          <li>Continuous integration</li>
+          <li>Code review with Gerrit</li>
+          <li>Static analysis</li>
+          <li>Unit tests</li>
+          <li>Respecting all the best practices of Eclipse projects development (no warnings, API restrictions)</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <section class="section--center mdl-grid">
+    <div class="mdl-card mdl-cell mdl-cell--12-col mdl-shadow--2dp">
+      <div class="mdl-card__supporting-text">
+        <h4>Dependencies</h4>
+        <p>
+          The core components of EEF should work with the minimum amount of dependencies possible.
+        </p>
+        <ul>
+          <li>EMF Common</li>
+          <li>EMF Ecore</li>
+          <li>EMF Edit</li>
+          <li>Guava</li>
+        </ul>
+        <p>
+          Guava should not appear in any API of the EEF project!
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section class="section--center mdl-grid">
+    <div class="mdl-card mdl-cell mdl-cell--12-col mdl-shadow--2dp">
+      <div class="mdl-card__supporting-text">
+        <h4>Technical Guidelines</h4>
+        <p>
+          EEF 1.x and 2.x should be able to work side by side, as such both projects should not use the same bundle name or package name. The core bundles of EEF 1.x uses the namespace org.eclipse.emf.eef. The bundle of EEF 2.x could thus use the namespace org.eclipse.eef to prevent any possible confusion. The URIs of the meta-models of EEF 2.x should also use a different namespace (http://www.eclipse.org/eef/...).
+        </p>
+        <p>
+          Some components used by EMF project should either not be used directly by EEF or used in a very specific manner. Some of those could be used by EEF but EEF should not instance them by itself.
+        </p>
+        <ul>
+          <li>UsageCrossReference &amp; ECrossReferenceAdapter</li>
+          <li>eAllContents()</li>
+          <li>EcoreUtil</li>
+          <li>eResource()</li>
+          <li>ResourceSet</li>
+          <li>EPackageRegistry - We should only read the EPackages available and it should not automatically load the EPackage directly</li>
+          <li>add() &amp; addUnique() - We should only use addUnique() in the create of the user interface model</li>
+          <li>EMF Edit - Everything displayed to the end user should use the label provider from EMF Edit</li>
+          <li>AdapterFactories and the XXXProvider should be properly disposed</li>
+          <li>Adapter &amp; ContentAdapter</li>
+          <li>Do not install a ChangeRecorder on the ResourceSet</li>
+        </ul>
+        <p>
+          We should also prevent leaks by not having references to
+        </p>
+        <ul>
+          <li>ResourceSet</li>
+          <li>Resource</li>
+          <li>EObject (small number of dependencies to instances of EObject with a short lifecycle)</li>
         </ul>
       </div>
     </div>
