Add the first version of the EEF meta-model.

--- a/documentation/contribution-guide/index.html
+++ b/documentation/contribution-guide/index.html
@@ -139,12 +139,10 @@ title: Contribution Guide
           This is the list of all the bundles and features of the project along with their role:
         </p>
         <ul>
-          <li>org.eclipse.eef - Bundle containing the EEF meta-models</li>
-          <li>org.eclipse.eef.edit - Bundle containing the EMF Edit part for the meta-models</li>
-          <li>org.eclipse.eef.core - Core bundle of EEF</li>
+          <li>org.eclipse.eef - Core bundle of EEF</li>
         </ul>
         <p>
-          The EEF packages are either named org.eclipse.eef.[...].api.[...] or org.eclipse.eef.[...].internal.[...]. All packages will be exported but the internal ones will be exported with the internal or x-friend annotation. All the packages are properly versionned using the baseliner.
+          The EEF packages are either named org.eclipse.eef.[...] or org.eclipse.eef.[...].internal.[...]. All packages will be exported but the internal ones will be exported with the internal or x-friend annotation. All the packages are properly versionned.
         </p>
       </div>
     </div>
