--- a/meetingminutes/index.html
+++ b/meetingminutes/index.html
@@ -12,6 +12,7 @@ title: Meeting Minutes
           <ul>
             <li><a href="{{ site.baseurl }}meetingminutes/meetingminutes-2015-07-21">2015-07-21</a></li>
             <li><a href="{{ site.baseurl }}meetingminutes/meetingminutes-2015-07-24">2015-07-24</a></li>
+            <li><a href="{{ site.baseurl }}meetingminutes/meetingminutes-2015-11-12">2015-11-12</a></li>
           </ul>
         </div>
       </div>
