--- a/specifications/index.html
+++ b/specifications/index.html
@@ -6,7 +6,7 @@ title: Specifications
   <section class="section--center mdl-grid">
     <div class="mdl-card mdl-cell mdl-cell--12-col mdl-shadow--2dp">
       <div class="mdl-card__supporting-text mdl-grid mdl-grid--no-spacing">
-        <h4 class="mdl-cell mdl-cell--12-col">Meeting Minutes</h4>
+        <h4 class="mdl-cell mdl-cell--12-col">Specification</h4>
 
         <div class="section__text mdl-cell mdl-cell--12-col">
           <ul>
