Contribute getting started section

--- a/documentation/developer-guide/index.html
+++ b/documentation/developer-guide/index.html
@@ -7,6 +7,17 @@ title: Developer Guide
   <section class="section--center mdl-grid">
     <div class="mdl-card mdl-cell mdl-cell--12-col mdl-shadow--2dp">
       <div class="mdl-card__supporting-text">
+        <h4><a href="{{ site.baseurl }}documentation/developer-guide/getting-started">Getting started</a></h4>
+        <p>
+          Try the new EEF integration with Sirius as an early-adopter!
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section class="section--center mdl-grid">
+    <div class="mdl-card mdl-cell mdl-cell--12-col mdl-shadow--2dp">
+      <div class="mdl-card__supporting-text">
         <h4>Introduction</h4>
         <p>
           This guide will contain everything needed in order to start integrating EEF in your project.
